# hm7_web_second

go_it7_web/: alembic.ini  myselect.py  pyproject.toml  seed.py
go_it7_web/alembic/: env.py
go_it7_web/alembic/versions/: 0ed239aa5c96_second.py  11c6842e6fa2_fixs_bag_second.py  29dce0b353e3_fixs_bag_second_4.py  34c7a708e4d6_tru.py  a175549eae05_fixs_bag.py  b6b9d1692dc4_first.py  bd5f8d1de86e_fixs_bag_second_3.py
go_it7_web/src/: db.py  models.py
