[tool.poetry]
name = "go-it7-web"
version = "0.1.0"
description = ""
authors = ["Іван Лубик <126516121+ivanlubyk@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "go_it7_web"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.17"
psycopg2 = "^2.9.6"
faker = "^18.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
